manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bakseter-no
  namespace: bakseter-no
spec:
  replicas: 2
  revisionHistoryLimit: 5
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: bakseter-no
              topologyKey: bakseter.net/physical-node
      dnsConfig:
        options:
          - name: ndots
            value: '1'
      containers:
        - name: bakseter-no
          image: ghcr.io/bakseter/bakseter.no:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp/nginx
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: nginx-tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
