manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bakseter-no
  namespace: bakseter-no
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
