manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: bakseter-net
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: public
      group: gateway.networking.k8s.io # for argocd diff
      kind: Gateway

  hostnames:
    - bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: web
          port: 80
          group: '' # for argocd diff
          kind: Service # for argocd diff
