manifests/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: web
  namespace: bakseter-net
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - rules:
            http:
              - path: /
                method: GET
              - path: /favicon.ico
                method: GET
          ports:
            - port: '8080'
              protocol: TCP

  egress: []
