manifests/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: web-allow-traefik-dns
  namespace: bakseter-net
spec:
  endpointSelector:
    matchLabels:
      app: web

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - rules:
            http:
              - path: '/'
                method: 'GET'
          ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP
